# fwi-predict

./: .gitignore  FWI_Review_v2.html  README.md  pyproject.toml  run_daily.py
DO_dashboard/: DO_Dashboard.ipynb  DO_measurements_and_predictions_V0.csv
data/clean/: ara_clean.csv  ara_data_josiah_duplicates.xlsx  ara_measurements_clean.csv  ara_predict_ds.geojson  combined_josiah_compare.csv  gfs_forecasts.csv  gfs_forecasts_cleaned.csv  jan_mar_25_w_metadata.geojson  jun_21_dec_24_error_check.xlsx  jun_21_dec_24_w_metadata.geojson  measurements_jan_mar_25.csv  measurements_jun_21_dec_24.csv  measurements_with_metadata.geojson  missing_measurement_instrument.xlsx  pond_metadata_clean.csv  pond_metadata_clean.geojson  predict_df.csv
data/raw/: All ARA Data until March 31, 2024.xlsx  June 2021-December 2024 Data From Tool_No Filter_No Tests.xlsx  data_directory.xlsx  (+7 more)
fwi_predict/: __init__.py  constants.py  gcs.py  pipeline.py  wq.py
notebooks/: 1 clean_ara_data.ipynb  1 clean_ara_measurements.ipynb  10 explore_sentinel.ipynb  12 new_download_pipeline.ipynb  13 prediction_pipeline.ipynb  14 prediction_simple.ipynb  15 train_autogluon.ipynb  16 explore_train_ds.ipynb  17 check_download_pipeline.ipynb  18 check_jun_dec_prediction.ipynb  19 check_jun_dec_performance.ipynb  2 explore_ara_clean.ipynb  2 explore_ara_measurements.ipynb  20 train_all_data.ipynb  22 combine_datasets_for_josiah.ipynb  23 clean_jun_2021_dec_2024_data.ipynb  25 clean_stocking_records.ipynb  26 explore_winkler_vs_old.ipynb  27 explore_detrending.ipynb  27 explore_sktime_glo_fcast.ipynb  27 training_experiment_battery.ipynb  3 clean_ara_ponds.ipynb  30 check_most_recent_gfs.ipynb  31 clean_jan_mar_25_data.ipynb  31a sentinel2_for_jan_mar_25_test.ipynb  32 test_jan_mar_25_preds.ipynb  4 combine_measurements_and_metadata.ipynb  4 create_ara_predict_set.ipynb  5 test_gfs_download.ipynb  6 explore_sentinel.ipynb  6 test_sentinel_download.ipynb  7 clean_gfs.ipynb  7 test_prediction.ipynb  8 create_predict_ds.ipynb  9a test_prediction_scratch.ipynb  9b test_prediction_simple.ipynb  Predict_OOR.ipynb  Pull_Satellite_Data_W_dropdown.ipynb
output/: measurements_with_metadata_profile_report.html.REMOVED.git-id
scripts/: c4c_frontend.py  clean_ara_data.py  clean_ara_measurements.py  clean_ara_ponds.py  create_train_dataset.py  get_gfs_data.py  split_data.py  test_frontend.py  test_june_dec_performance.py  upload_to_gcs.py
(+49 files in other folders)
