[tool.poetry]
name = "fwi-predict"
version = "0.1.0"
description = "Python package for FWI water quality prediction."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
scikit-learn = "^1.6.0"
geopandas = "^1.0.1"
openpyxl = "^3.1.5"
earthengine-api = "^1.4.3"
setuptools = "^75.6.0"
geemap = "^0.35.1"
prophet = "^1.1.6"
yellowbrick = "^1.5"
dataprep = "^0.4.5"
streamlit = "^1.41.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
