[tool.poetry]
name = "fwi-predict"
version = "0.1.0"
description = "Python package for FWI water quality prediction."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
geopandas = "^1.0.1"
openpyxl = "^3.1.5"
earthengine-api = "^1.4.3"
geemap = "^0.35.1"
prophet = "^1.1.6"
yellowbrick = "^1.5"
streamlit = "^1.41.1"
ydata-profiling = "^4.12.1"
setuptools = "^75.6.0"
plyer = "^2.1.0"
timezonefinder = "^6.5.7"
autogluon-tabular = {extras = ["all"], version = "^1.2"}
xgboost = "^2.1.3"
sktime = "^0.36.0"
streamlit-folium = "^0.24.0"
tabpfn = "^2.0.6"
tabpfn-extensions = "^0.0.4"
gpy = "^1.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
mapclassify = "^2.8.1"
xlrd = "^2.0.1"
pygwalker = "^0.4.9.13"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
